create image docker from spring

--- a/bundle-products-deploy-aws/pom.xml
+++ b/bundle-products-deploy-aws/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.mp.app</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>bundle-products</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>springboot-aws-deploy</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Bundle products for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
     </properties>
