--- a/bundle-users-microservices/bundle-users-microservice/src/main/resources/application.properties
+++ b/bundle-users-microservices/bundle-users-microservice/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 #spring.datasource.url = jdbc:oracle:thin:@localhost:1521:xe
 #spring.datasource.url = jdbc:mysql://localhost:13306/users_db?useSSL=false
 #spring.datasource.url = jdbc:mysql://mysql_container/users_db?useSSL=false
-spring.datasource.url = jdbc:mysql://172.18.0.1:13306/users_db?useSSL=false
-spring.datasource.username = root
+spring.datasource.url = jdbc:mysql://localhost:13306/users_db?useSSL=false
+spring.datasource.username = mysqluser
 spring.datasource.password = secret
 #spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 
