--- a/bundle-products-deploy-aws/src/main/resources/application.properties
+++ b/bundle-products-deploy-aws/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-server.port=8090
+#spring.profiles.active=production
+##################################################
+server.port = 8090
+##################################################
+# define H2 DataSrouce properties
+spring.datasource.url=jdbc:h2:mem:blog_simple_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.platform=h2
+#spring.datasource.data=classpath:/sql/import-h2.sql
+##################################################
+# enable H2 web console and set url for web console
+http://localhost:8090/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
